# Timekeeper-Discord.py

./: pyproject.toml
.claude/: settings.local.json
Rust/: Cargo.toml
Rust/src/: _types.rs  backoff.rs  client.rs  enums.rs  errors.rs  gateway.rs  http.rs  lib.rs  mixins.rs  object.rs  permissions.rs  state.rs  utils.rs
