[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "discord-py-rust"
version = "3.0.0"
description = "Discord.py reimplemented in Rust for better performance"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["discord", "api", "bot", "async", "rust"]
authors = [
    {name = "404Development LLC"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
voice = ["PyNaCl>=1.5.0,<1.6", "cffi>=1.12.0"]
speed = ["orjson>=3.9.0"]
docs = ["sphinx>=7.0.0", "sphinxcontrib-trio>=1.1.2"]

[project.urls]
Homepage = "https://github.com/404Development/discord-py-rust"
Documentation = "https://discordpy.readthedocs.io/en/latest/"
"Issue Tracker" = "https://github.com/404Development/discord-py-rust/issues"

[tool.maturin]
python-source = "Python"
module-name = "discord._discord"
features = ["pyo3/extension-module"]
