[package]
name = "discord-py-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "discord"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
flate2 = "1.0"
url = "2.5"
bitflags = "2.6"
chrono = "0.4"
dashmap = "6.1"
